ui/recap/css/_recap.scss
// dark theme is forced on this page
body {
  // background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
  --c-font-page: #fff;
  --c-font-shadow: hsla(0, 0, 0%, 0);
  &,
  .site-title,
  .site-title span,
  .site-buttons .link {
    #user_tag::after,
    &,
    &:hover {
      color: #fff;
    }
  }
  .hbg__in {
    &,
    &::before,
    &::after {
      background-color: #fff;
    }
  }
  #clinput,
  #friend_box,
  .site-title-nav__donate {
    display: none;
  }
  @media (min-width: at-least($medium)) {
    #topnav {
      display: none;
    }
  }
}
.recap {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 1vw;
  right: 1vw;
  height: 100%;
  text-align: center;
}

.recap a {
  color: #fff;
  border-bottom: 1px dotted #ddd;
}

.swiper {
  height: 100%;
  opacity: 0;
  @include transition(opacity 0.2s);
  &-initialized {
    opacity: 1;
  }
  --swiper-theme-color: #fff;
}
.swiper-button-next,
.swiper-button-prev {
  color: #fff;
  font-size: 3em;
}

.swiper-slide {
  @extend %flex-column;
  justify-content: center;
  align-items: center;
  @include fluid-size('font-size', 15px, 25px);
  gap: 3em;
}

.recap {
  &__logo,
  .lpv {
    width: 384px;
    max-width: 61vw;
    max-height: 50vh;
  }
  .lpv {
    --c-lpv-bg: transparent;
    outline: none;
    box-shadow: none;
  }
}

.recap__slide--await .spinner {
  margin: 0;
}

.recap__slide--init {
  h2 {
    @include fluid-size('font-size', 24px, 38px);
  }
}

.recap__content {
  @extend %flex-column;
  gap: 2em;
  font-size: 1.6em;
}

.recap__title {
  margin: 2em 0;
}

.recap--massive {
  @extend %flex-column;
  align-items: center;
  max-width: 80%;
  @include fluid-size('font-size', 19px, 42px);
  strong {
    font-size: 3em;
  }
}
.recap--big {
  font-size: 1.5em;
}

.recap__slide--time .recap--massive strong {
  font-size: 2em;
}

.recap__perfs {
  @extend %flex-column;
  gap: 1em;
}
.recap__perf {
  position: relative;
  color: white;
}

.recap__perf__duration {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: -1;
  padding: 1em 2em;
  border-radius: 0 5em 5em 0;
  color: $c-over;
  padding-right: 0.5em;
}
.recap__perf__data {
  @extend %flex-center-nowrap;
  gap: 3rem;
  padding: 0 2rem;
  i {
    font-size: 3em;
  }
  strong {
    font-size: 1.7em;
    line-height: 1;
  }
}
.recap__perf__games strong {
  display: block;
  font-weight: 2em;
}

.recap__shareable {
  .logo {
    width: 60%;
    max-width: 400px;
  }
  h2 {
    font-size: 1.5em;
    margin: 0.4em 0 1.5em;
  }
  .stat {
    font-size: 1.5em;
    @media (max-width: at-most($x-small)) {
      font-size: 1.3em;
    }
    @media (max-width: at-most($xx-small)) {
      font-size: 1.2em;
    }
  }
  .grid {
    display: flex;
    flex-wrap: wrap;
    row-gap: 1.5em;
    padding: 0.5em;

    .stat {
      flex: 50%;
      a {
        border: none;

        .uflair {
          margin-right: 0.2em;
        }
      }
    }
  }

  .openings {
    margin-top: 2em;

    .stat {
      margin-top: 1em;
    }
  }
  @media (max-height: 650px) {
    .logo {
      height: 20px;
      width: auto;
    }
    h2 {
      font-size: 1.2em;
      margin: 0.4em 0;
    }
    .openings {
      margin-top: 1em;
      .stat {
        font-size: 1em;
        margin-top: 0.5em;
      }
    }
  }
}

.recap small {
  font-size: 0.8em;
  opacity: 0.6;
}

.swiper .autoplay-progress {
  position: absolute;
  right: 16px;
  bottom: 16px;
  z-index: 10;
  width: 48px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  color: var(--swiper-theme-color);

  svg {
    --progress: 0;
    position: absolute;
    left: 0;
    top: 0px;
    z-index: 10;
    width: 100%;
    height: 100%;
    stroke-width: 4px;
    stroke: var(--swiper-theme-color);
    fill: none;
    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
    stroke-dasharray: 125.6;
    transform: rotate(-90deg);
  }
}

.recap__data {
  td {
    padding: 0.5em 0;
  }
  td:first-child {
    text-align: left;
  }
  td:last-child {
    text-align: right;
    font-size: 0.8em;
    opacity: 0.8;
    min-width: 12ch;
  }
}
.recap__slide--opponents {
  a {
    border: none;
  }
  .uflair,
  .noflair {
    font-size: 1.5em;
    margin-right: 0.5em;
  }
  .noflair {
    opacity: 0.8;
  }
  .trophy {
    height: 1em;
  }
}

@media (max-width: at-most($xx-small)) {
  .recap__slide--lichess-games {
    .recap--massive {
      strong {
        font-size: 2em;
      }
    }
  }
}

.recap ul {
  text-align: left;
  li {
    @extend %flex-center;
    &:before {
      content: '✓';
      font-size: 1.5em;
      margin-right: 0.3em;
    }
  }
}

.animated-pulse {
  animation: pulse 1s 1;
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.3);
  }

  100% {
    transform: scale(1);
  }
}

