recap: fix for 1440x900 resolution. site name is already visible in nav

--- a/ui/recap/css/_recap.scss
+++ b/ui/recap/css/_recap.scss
@@ -218,6 +218,11 @@ body {
       }
     }
   }
+  @media (min-width: at-least($xx-small)) {
+    .logo {
+      display: none;
+    }
+  }
 }
 
 .recap small {
